Bug 1122160 Add operator+=() and operator-=() to DebugOnly r=froydnj